tests/NormalTests/paczka1/fuzzy1/93443245.err
Error in line 2: S754 S744 96,4
Error in line 19: wfEqG3NQn S754 85,5
Error in line 21: PalvUIssl0j S754 19,8
Error in line 16: EObe A684 95,7
Error in line 20: n58ei S85 57,9
Error in line 23: PalvUIssl0j S744 10,0
Error in line 25: n58ei A684 72,8
